set hit_layer to true when hit on scrollbar

When hit on a scrollbar, hit_layer can be false. It cause the
hit test result in child frame not pass to outer frame.
In this CL, force hit_layer to true when hit on frame scrollbar.

Bug: 806300
Change-Id: Ie2debd3d2eae626022af508b0c0962e39095fb17
Reviewed-on: https://chromium-review.googlesource.com/889518
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Ella Ge <eirage@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533273}
Former-commit-id: 571db837b97e3c475846ea02f928200140769dac